# hanafuda

./: TODO.md  Taskfile.yml  hanafuda.code-workspace
backend/: LICENSE  hanafuda-backend.cabal
backend/app/: Main.hs
backend/src/: Cards.hs  GameHandler.hs  GameIO.hs
backend/src/KoiKoi/: Game.hs  GameEvent.hs  GameState.hs  Score.hs
backend/test/: CardSpec.hs
backend/test/KoiKoi/: GameSpec.hs
