cabal-version:      3.0

name:               hanafuda-backend
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

license:            MIT
license-file:       LICENSE
author:             Raphael Meyer

build-type:         Simple

common warnings
    ghc-options:        -Wall -Werror

library hanafuda
    import:             warnings
    exposed-modules:    Cards
    build-depends:      base
    hs-source-dirs:     src
    default-language:   Haskell2010

executable hanafuda-server
    import:             warnings
    main-is:            Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:      base,
                        hanafuda

    hs-source-dirs:     app

    default-language:   Haskell2010
