cabal-version:      3.0

name:               hanafuda-backend
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

license:            MIT
license-file:       LICENSE
author:             Raphael Meyer

build-type:         Simple

common common-properties
    ghc-options:        -Wall -Werror
    default-language:   Haskell2010
    build-depends:      base

library hanafuda
    import:             common-properties
    exposed-modules:
        Cards,
        GameHandler,
        GameIO,
        KoiKoi.Game,
        KoiKoi.GameEvent,
        KoiKoi.GameState,
        KoiKoi.Score
    build-depends:
        containers
    hs-source-dirs:     src

executable hanafuda-server
    import:             common-properties
    main-is:            Main.hs
    build-depends:
        hanafuda
    hs-source-dirs:     app
    default-language:   Haskell2010

test-suite hanafuda-spec
    import:             common-properties
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    other-modules:
        CardSpec,
        KoiKoi.GameSpec
    hs-source-dirs:     test
    build-depends:
        hanafuda,
        containers,
        hspec
    build-tool-depends:
        hspec-discover:hspec-discover
